apps/api/base/middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-except-acme
spec:
  redirectScheme:
    scheme: https
    permanent: true
