apps/api/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
        traefik.ingress.kubernetes.io/router.middlewares: api-prod-redirect-except-acme@kubernetescrd

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ontu-schedule.pavp.pp.ua
      secretName: ontu-schedule-tls
  rules:
    - host: ontu-schedule.pavp.pp.ua
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  ontu-schedule-bot-admin
                port:
                  number: 80
